--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <h1>My Links</h1>
+    <h1>Cool things</h1>
     <nav>
       <ul>
         <li><a href="./disco_board/chess.html">Disco Board</a></li>
