adds moving ball

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         background-color: black;
         color: white;
       }
-      ul {
-        padding-left: 1em;
-      }
+
       li {
         border-left: 10px solid crimson;
+        border-right: 10px solid crimson;
+        border-radius: 10%;
         list-style: none;
-        font-size: 2em;
+        font-size: 40px;
+        width: 300px;
         margin-bottom: 10px;
         padding-left: 20px;
       }
@@ -27,6 +28,7 @@
         color: gold;
       }
       a:hover {
+        cursor: pointer;
         color: white;
       }
     </style>
@@ -36,6 +38,9 @@
     <nav>
       <ul>
         <li><a href="./disco_board/chess.html">Disco Board</a></li>
+        <li>
+          <a href="./moving_ball/moving_ball.html">Moving Ball</a>
+        </li>
       </ul>
     </nav>
   </body>
