moving balls adds

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       <ul>
         <li><a href="./disco_board/chess.html">Disco Board</a></li>
         <li>
-          <a href="./moving_ball/moving_ball.html">Moving Ball</a>
+          <a href="./moving_ball/scroll.html">Scroll</a>
+        </li>
+        <li>
+          <a href="./moving_ball/moving_balls.html">Moving Balls</a>
         </li>
       </ul>
     </nav>
