--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <ul>
         <li><a href="./disco_board/chess.html">Disco Board</a></li>
         <li>
-          <a href="./moving_ball/scroll.html">Scroll</a>
+          <a href="./moving_ball/scroll.html">Rotating</a>
         </li>
         <li>
           <a href="./moving_ball/moving_balls.html">Moving Balls</a>
