--- a/moving_ball/scroll.html
+++ b/moving_ball/scroll.html
@@ -10,11 +10,10 @@
         align-items: start;
         margin-top: 100px;
         margin-left: 10px;
-        border-bottom: 5px solid black;
-        border-right: 5px solid black;
+        border: 5px solid black;
         flex-direction: column;
-        transform: rotate(10deg);
         justify-content: space-between;
+        border-radius: 80px;
         background-color: skyblue;
       }
       .ball {
@@ -31,7 +30,7 @@
       .stop-button {
         width: 100px;
         height: 40px;
-        /* margin-top: 20px; */
+        margin-left: 30px;
         border-radius: 30px;
         cursor: pointer;
         background-color: black;
@@ -44,11 +43,11 @@
 
       @keyframes move-ball {
         from {
-          transform: translate(0px);
+          transform: translate(8px);
         }
 
         to {
-          transform: translate(898px);
+          transform: translate(890px);
         }
       }
       .stop-button:active + .ball {
